--- a/style.css
+++ b/style.css
@@ -1,13 +1,16 @@
 body{
-    
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
 }
 h1{
     font-family: 'Bebas Neue', cursive;
     font-weight: 700;
     font-size: 80px;
 }
-h2,p{
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+h2 span{
+    font-weight:900;
+}
+p{
     font-weight: 400;
 }
 span{
@@ -16,7 +19,7 @@ span{
 header{
     background-color: #FFF9F4;
 }
-button{
+btn{
     background-color: #3543BC, 100%;
     height: 60px;
     width: 170px;
@@ -24,4 +27,13 @@ button{
 }
 .card{
     /* background-color: #E5E5E5; */
+}
+img{
+    max-width: 100%;
+}
+.navbar{
+    font-weight: 500;
+}
+.price{
+    color: #FA804C, 100%;
 }
